koho_cc-master/datagrump/capturado2.txt
checking for a BSD-compatible install... /usr/bin/install -c
checking whether build environment is sane... yes
checking for a thread-safe mkdir -p... /bin/mkdir -p
checking for gawk... gawk
checking whether make sets $(MAKE)... yes
checking whether make supports nested variables... yes
checking for g++... g++
checking whether the C++ compiler works... yes
checking for C++ compiler default output file name... a.out
checking for suffix of executables... 
checking whether we are cross compiling... no
checking for suffix of object files... o
checking whether we are using the GNU C++ compiler... yes
checking whether g++ accepts -g... yes
checking for style of include used by make... GNU
checking dependency style of g++... gcc3
checking for ranlib... ranlib
checking for gcc... gcc
checking whether we are using the GNU C compiler... yes
checking whether gcc accepts -g... yes
checking for gcc option to accept ISO C89... none needed
checking whether gcc understands -c and -o together... yes
checking dependency style of gcc... gcc3
checking how to run the C preprocessor... gcc -E
checking for grep that handles long lines and -e... /bin/grep
checking for egrep... /bin/grep -E
checking for ANSI C header files... yes
checking for sys/types.h... yes
checking for sys/stat.h... yes
checking for stdlib.h... yes
checking for string.h... yes
checking for memory.h... yes
checking for strings.h... yes
checking for inttypes.h... yes
checking for stdint.h... yes
checking for unistd.h... yes
checking for uint16_t... yes
checking that generated files are newer than configure... done
configure: creating ./config.status
config.status: creating Makefile
config.status: creating src/Makefile
config.status: creating examples/Makefile
config.status: creating datagrump/Makefile
config.status: creating config.h
config.status: config.h is unchanged
config.status: executing depfiles commands
make  all-recursive
make[1]: Entering directory '/home/ubuntu/TP-02/koho_cc-master'
Making all in src
make[2]: Entering directory '/home/ubuntu/TP-02/koho_cc-master/src'
make[2]: Nothing to be done for 'all'.
make[2]: Leaving directory '/home/ubuntu/TP-02/koho_cc-master/src'
Making all in examples
make[2]: Entering directory '/home/ubuntu/TP-02/koho_cc-master/examples'
make[2]: Nothing to be done for 'all'.
make[2]: Leaving directory '/home/ubuntu/TP-02/koho_cc-master/examples'
Making all in datagrump
make[2]: Entering directory '/home/ubuntu/TP-02/koho_cc-master/datagrump'
g++ -DHAVE_CONFIG_H -I. -I..  -std=c++11 -pthread -I./../src  -pedantic -Wall -Wextra -Weffc++ -Werror -g -O2 -MT controller.o -MD -MP -MF .deps/controller.Tpo -c -o controller.o controller.cc
controller.cc: In constructor ‘Controller::Controller(bool)’:
controller.cc:15:1: error: ‘Controller::the_window_size’ should be initialized in the member initialization list [-Werror=effc++]
 Controller::Controller( const bool debug )
 ^
controller.cc:15:1: error: ‘Controller::skewed_lowest_owt’ should be initialized in the member initialization list [-Werror=effc++]
controller.cc:15:1: error: ‘Controller::lowest_rtt’ should be initialized in the member initialization list [-Werror=effc++]
controller.cc: At global scope:
controller.cc:34:6: error: prototype for ‘void Controller::datagram_was_sent(uint64_t, uint64_t, bool)’ does not match any in class ‘Controller’
 void Controller::datagram_was_sent( const uint64_t sequence_number,
      ^
In file included from controller.cc:3:0:
controller.hh:29:8: error: candidate is: void Controller::datagram_was_sent(uint64_t, uint64_t)
   void datagram_was_sent( const uint64_t sequence_number,
        ^
cc1plus: all warnings being treated as errors
Makefile:379: recipe for target 'controller.o' failed
make[2]: *** [controller.o] Error 1
make[2]: Leaving directory '/home/ubuntu/TP-02/koho_cc-master/datagrump'
Makefile:358: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/ubuntu/TP-02/koho_cc-master'
Makefile:299: recipe for target 'all' failed
make: *** [all] Error 2
net.ipv4.ip_forward = 1
[3;J[H[2JExecuta o programama para o usuário O-Cride-Fala-Pra-Mãe
Listening on :::9090
Sending to 100.64.0.1:9090

Average capacity: 5.04 Mbits/s
Average throughput: 2.80 Mbits/s (55.6% utilization)
95th percentile per-packet queueing delay: 36 ms
95th percentile signal delay: 86 ms
Power: 32.58
Uploading data to server... done.

Upload successful (1721405 bytes).
For analysis, please visit:

   http://cs344g.keithw.org/report?Cride_Fala_pra_MAE-1541123476-homuanoa

checking for a BSD-compatible install... /usr/bin/install -c
checking whether build environment is sane... yes
checking for a thread-safe mkdir -p... /bin/mkdir -p
checking for gawk... gawk
checking whether make sets $(MAKE)... yes
checking whether make supports nested variables... yes
checking for g++... g++
checking whether the C++ compiler works... yes
checking for C++ compiler default output file name... a.out
checking for suffix of executables... 
checking whether we are cross compiling... no
checking for suffix of object files... o
checking whether we are using the GNU C++ compiler... yes
checking whether g++ accepts -g... yes
checking for style of include used by make... GNU
checking dependency style of g++... gcc3
checking for ranlib... ranlib
checking for gcc... gcc
checking whether we are using the GNU C compiler... yes
checking whether gcc accepts -g... yes
checking for gcc option to accept ISO C89... none needed
checking whether gcc understands -c and -o together... yes
checking dependency style of gcc... gcc3
checking how to run the C preprocessor... gcc -E
checking for grep that handles long lines and -e... /bin/grep
checking for egrep... /bin/grep -E
checking for ANSI C header files... yes
checking for sys/types.h... yes
checking for sys/stat.h... yes
checking for stdlib.h... yes
checking for string.h... yes
checking for memory.h... yes
checking for strings.h... yes
checking for inttypes.h... yes
checking for stdint.h... yes
checking for unistd.h... yes
checking for uint16_t... yes
checking that generated files are newer than configure... done
configure: creating ./config.status
config.status: creating Makefile
config.status: creating src/Makefile
config.status: creating examples/Makefile
config.status: creating datagrump/Makefile
config.status: creating config.h
config.status: config.h is unchanged
config.status: executing depfiles commands
make  all-recursive
make[1]: Entering directory '/home/ubuntu/TP-02/koho_cc-master'
Making all in src
make[2]: Entering directory '/home/ubuntu/TP-02/koho_cc-master/src'
make[2]: Nothing to be done for 'all'.
make[2]: Leaving directory '/home/ubuntu/TP-02/koho_cc-master/src'
Making all in examples
make[2]: Entering directory '/home/ubuntu/TP-02/koho_cc-master/examples'
make[2]: Nothing to be done for 'all'.
make[2]: Leaving directory '/home/ubuntu/TP-02/koho_cc-master/examples'
Making all in datagrump
make[2]: Entering directory '/home/ubuntu/TP-02/koho_cc-master/datagrump'
g++ -DHAVE_CONFIG_H -I. -I..  -std=c++11 -pthread -I./../src  -pedantic -Wall -Wextra -Weffc++ -Werror -g -O2 -MT controller.o -MD -MP -MF .deps/controller.Tpo -c -o controller.o controller.cc
controller.cc: In constructor ‘Controller::Controller(bool)’:
controller.cc:15:1: error: ‘Controller::the_window_size’ should be initialized in the member initialization list [-Werror=effc++]
 Controller::Controller( const bool debug )
 ^
controller.cc:15:1: error: ‘Controller::skewed_lowest_owt’ should be initialized in the member initialization list [-Werror=effc++]
controller.cc:15:1: error: ‘Controller::lowest_rtt’ should be initialized in the member initialization list [-Werror=effc++]
controller.cc: At global scope:
controller.cc:34:6: error: prototype for ‘void Controller::datagram_was_sent(uint64_t, uint64_t, bool)’ does not match any in class ‘Controller’
 void Controller::datagram_was_sent( const uint64_t sequence_number,
      ^
In file included from controller.cc:3:0:
controller.hh:29:8: error: candidate is: void Controller::datagram_was_sent(uint64_t, uint64_t)
   void datagram_was_sent( const uint64_t sequence_number,
        ^
cc1plus: all warnings being treated as errors
Makefile:379: recipe for target 'controller.o' failed
make[2]: *** [controller.o] Error 1
make[2]: Leaving directory '/home/ubuntu/TP-02/koho_cc-master/datagrump'
Makefile:358: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/ubuntu/TP-02/koho_cc-master'
Makefile:299: recipe for target 'all' failed
make: *** [all] Error 2
net.ipv4.ip_forward = 1
[3;J[H[2JExecuta o programama para o usuário O-Cride-Fala-Pra-Mãe
Listening on :::9090
Sending to 100.64.0.1:9090

Average capacity: 4.67 Mbits/s
Average throughput: 2.37 Mbits/s (50.7% utilization)
95th percentile per-packet queueing delay: 36 ms
95th percentile signal delay: 73 ms
Power: 32.45mm-throughput-graph exited with error. NOT uploading at ./run-contest line 52.
